--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,91 @@
 @import url("photographer.css");
 
 body {
-    font-family: "DM Sans", sans-serif;
-    margin: 0;
+  font-family: "DM Sans", sans-serif;
+  margin: 0 auto;
+  min-width: 1024px;
 }
 
-
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  margin-bottom: 50px;
+}
+
+main {
+    margin-bottom: 100px;
 }
 
 h1 {
-    color: #901C1C;
-    margin-right: 100px;
+  color: #901c1c;
+  margin-right: 100px;
 }
 
 .logo {
-    height: 50px;
-    margin-left: 100px;
+  height: 50px;
+  margin-left: 100px;
 }
 
 .photographer_section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 70px;
+  margin: 0 100px;
 }
 
 .photographer_section article {
-    justify-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.photographer_section article a {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-decoration: none;
+}
+
+.photographer_section article a img {
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  border-radius: 50% 50%;
+  background: #000000;
+  box-shadow: 0px 4px 12px rgb(0 0 0 / 25%);
+  filter: contrast(0.1rem);
 }
 
 .photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+  color: #d3573c;
+  font-size: 36px;
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: center;
 }
 
-.photographer_section article img {
-    height: 200px;
-    width: 200px;
+.photographer_section article div {
+  text-align: center;
+}
+
+.photographer_section article div h3 {
+  color: #910009;
+  font-size: 0.9rem;
+  font-weight: 600;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.photographer_section article div div {
+  font-size: 0.6rem;
+  font-weight: 600;
+}
+
+.photographer_section article div span {
+  color: #6b6b6b;
+  font-size: 0.6rem;
 }
