--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,9 @@ h1 {
   width: 200px;
   object-fit: cover;
   border-radius: 50% 50%;
-  background: #000000;
-  box-shadow: 0px 4px 12px rgb(0 0 0 / 25%);
-  filter: contrast(0.1rem);
+  background: #f1f1f1;
+  box-shadow: 0px 4px 12px rgb(0 0 0 / 0.25);
+  overflow-clip-margin: unset;
 }
 
 .photographer_section article h2 {
@@ -80,12 +80,12 @@ h1 {
   margin-bottom: 0px;
 }
 
-.photographer_section article div div {
+.photographer_section article div .tagline {
   font-size: 0.6rem;
   font-weight: 600;
 }
 
-.photographer_section article div span {
+.photographer_section article div .price {
   color: #6b6b6b;
   font-size: 0.6rem;
 }
