--- a/css/photographer.css
+++ b/css/photographer.css
@@ -245,6 +245,139 @@ input {
   top: 1em;
 }
 
+/* ///////////////////////// */
+
+label[for="dropdown"] {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+#dropdown {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 170px;
+  max-height: 70px;
+  font-size: 20px;
+  font-weight: normal;
+  color: white;
+  background-color: #901c1c;
+  text-align: left;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px 5px 0 0;
+  padding: 11px 11px 11px 0;
+  margin-left: 10px;
+}
+
+#dropdown.active {
+  border-radius: 5px;
+}
+
+#dropdown #selected-option {
+  display: inline-block;
+  width: 80%;
+  height: 100%;
+  padding-left: 25px;
+}
+
+#dropdown:not(.active) svg#chevron {
+  transform: translateY(50%) rotateX(180deg);
+}
+
+#dropdown svg {
+  position: absolute;
+  width: 20px;
+  padding: 0;
+  margin: 0;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: transform 0.25s cubic-bezier(0.85, 0.44, 0.15, 0.87);
+  transform-origin: top; /* changer le point d'origine de la rotation */
+}
+
+#dropdown ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  z-index: 1;
+  overflow: hidden;
+  display: block;
+}
+
+#dropdown ol.filtreInvisible {
+  display: none;
+}
+
+[role="selectionFiltre"] {
+  box-sizing: border-box;
+  list-style-type: none;
+  margin: 0;
+  display: block;
+  width: 100%;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  background-color: #901c1c;
+  border-radius: 0;
+  position: relative;
+  padding: 10px 0;
+  padding-left: 25px;
+}
+
+#dropdown ol li.hidden {
+  display: none;
+}
+
+.roundedBottom {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+/* trait du bas pour les 3 */
+.roundedBottom::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 10%;
+  width: 80%;
+  height: 1px;
+  background-color: white;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.4);
+}
+
+/* trait du haut pour titre et date */
+#dropdown ol li[aria-selected="false"]:first-of-type::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 10%;
+  width: 80%;
+  height: 1px;
+  background-color: white;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.4);
+}
+
+/* trait du haut pour pop */
+#dropdown ol li#dateFiltre::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 10%;
+  width: 80%;
+  height: 1px;
+  background-color: white;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.4);
+}
+
+/* ///////////////////////// */
+
 .photograph_media {
   margin: 70px 100px 30px 100px;
   max-width: 100%;
@@ -381,7 +514,7 @@ input {
 }
 
 /*...................LIGHTBOX..............*/
-#carroussel-modal {
+#carousel-modal {
   display: none;
   position: fixed;
   top: 0;
@@ -392,16 +525,16 @@ input {
   z-index: 10;
   transition: opacity 0.3s;
 }
-#carroussel-modal div {
+#carousel-modal div {
   display: flex;
 }
-#carroussel-modal div .carousel {
+#carousel-modal div .carousel {
   display: flex;
   /* padding-top: 3%; */
   padding-left: 0;
   margin: 3% auto 0;
 }
-#carroussel-modal div .carousel img {
+#carousel-modal div .carousel img {
   width: 50vw;
   height: 80vh;
   object-fit: cover;
@@ -409,7 +542,7 @@ input {
   overflow-clip-margin: unset;
   object-position: 50% 30%;
 }
-#carroussel-modal div .carousel .play-button {
+#carousel-modal div .carousel .play-button {
   background-color: rgba(255, 255, 255, 0);
   position: absolute;
   cursor: pointer;
@@ -422,10 +555,10 @@ input {
   border: 0;
   align-self: center;
 }
-#carroussel-modal div .carousel .plyr {
+#carousel-modal div .carousel .plyr {
   border-radius: 10px;
 }
-#carroussel-modal div .carousel .item-title {
+#carousel-modal div .carousel .item-title {
   color: #901c1c;
   font-size: 24px;
   font-weight: 400;
